--- a/26-Lesson Project- 2/CSS/style.css
+++ b/26-Lesson Project- 2/CSS/style.css
@@ -6,7 +6,8 @@ body {
   background-color: a;
 }
 .container {
-  width: 1000px;
+  max-width: 1000px;
+  width: 98%;
   height: auto;
   margin: 10px auto;
   background-color: white;
@@ -194,3 +195,33 @@ body {
   padding: 10px;
 }
 /* Contact page */
+
+/* Mobile Menu */
+
+.mobile-menu {
+  display: none !important;
+}
+
+/* Mobile Menu */
+
+/* Responsive Web Design */
+@media screen and (max-width: 750px) {
+  .main-header {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+  }
+  .mobile-menu {
+    display: flex !important;
+    justify-content: space-between !important;
+  }
+  .main-menu > ul:nth-of-type(2) {
+    flex-direction: column;
+    border-top: 1px solid gainsboro;
+  }
+  .drop > li > a {
+    display: block;
+    width: auto;
+  }
+}
+/* Responsive Web Design */
